codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_wait_status_renders_command_in_single_details_row.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: normalize_snapshot_paths(rendered)
---
• 等 待 后 台 终 端  (0s • esc 中 断 ) · 1 个 后 台 终 端 运 …
  └ cargo test -p codex-core -- --exact…
}o.o{ "轻 轻 漂 来 。 "


› 让  Codex 帮 你 做 任 何 事

  gpt-5.3-codex 默 认  · 已 用  0% · /tmp/project
