codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_waiting_multiple_empty_after.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
assertion_line: 774
expression: combined
---
• 已等待后台终端 · just fix
