codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__user_prompt_submit_app_server_hook_notifications_render_snapshot.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
assertion_line: 1384
expression: combined
---
• 用户消息提交 钩子（已停止）
  警告：go-workflow must start from PlanMode
  停止：prompt blocked
